[gd_scene load_steps=8 format=2]

[ext_resource path="res://things/machine_ui/MachineUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://things/machine/Stonehenge.png" type="Texture" id=2]
[ext_resource path="res://things/machine/Machine.gd" type="Script" id=3]
[ext_resource path="res://things/dialog_ui/DialogUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://things/machine/off.wav" type="AudioStream" id=5]
[ext_resource path="res://things/machine/on.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128.968, 3086.73 )

[node name="Machine" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -213.985 )
z_index = -1
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 28.2843 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -3127.02 )
shape = SubResource( 1 )

[node name="MachineUI" parent="." instance=ExtResource( 1 )]

[node name="Tween" type="Tween" parent="."]

[node name="DialogUI" parent="." instance=ExtResource( 4 )]

[node name="On" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -7.027

[node name="Off" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.481

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="influence_changed" from="MachineUI" to="." method="_on_MachineUI_influence_changed"]
